Live Data/mdapipkg/unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Service</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Access Outstanding</fullName>
        </values>
        <values>
            <fullName>Awaiting Fix Confirmation</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Outstanding</fullName>
        </values>
        <values>
            <fullName>Development Outstanding</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Support Outstanding</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Third Party Outstanding</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CaseImportance__c</fullName>
        <formula>IF(

HoursWaitingNumber__c   &gt;= 1,

 (HoursWaitingNumber__c 
 * 
(( HoursSinceLastModified__c * 30)/100) 
 * 
CASE( Priority , &quot;1&quot;, 16, &quot;2&quot;, 4, &quot;3&quot;, 2, &quot;4&quot;, 1, 1)), 

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Importance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseWaitingText__c</fullName>
        <formula>TEXT( CaseWaiting__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseWaitingText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseWaiting__c</fullName>
        <formula>Time_With_Customer__c +  Time_With_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Waiting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>IF(
LEFT(OwnerId, 3) == &apos;00G&apos;,
HYPERLINK(&quot;/p/own/Queue/d?id=&quot; &amp; OwnerId, Owner:Queue.QueueName),
HYPERLINK(&quot;/Support/s/profile/&quot; &amp; OwnerId, Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEntitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you are unable to find any products please raise an Entitlement Query or ask your question in the community</inlineHelpText>
        <label>Entitled Products</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Entitlement selected is not found against your contact record</errorMessage>
            <filterItems>
                <field>ContactEntitlement__c.ContactID18__c</field>
                <operation>equals</operation>
                <valueField>$User.ContactID18__c</valueField>
            </filterItems>
            <filterItems>
                <field>ContactEntitlement__c.Contact__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.ContactId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ContactEntitlement__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerLastContacted__c</fullName>
        <label>Customer Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HoursSinceLastModified__c</fullName>
        <formula>((NOW()- CustomerLastContacted__c )*24*60)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursWaitingNumber__c</fullName>
        <formula>VALUE(HoursWaiting__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Waiting Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursWaiting__c</fullName>
        <formula>LEFT(&quot;0&quot; &amp; CaseWaitingText__c  , FIND(&quot;.&quot;, CaseWaitingText__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Waiting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportanceRecalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Importance Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RemedyForce Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Service Cloud Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Query</fullName>
        <active>true</active>
        <businessProcess>Service</businessProcess>
        <description>Cases relating to billing, renewals, queries around account managers, change of address or information requests</description>
        <label>Query</label>
    </recordTypes>
</CustomObject>